# CG18-19

./: README.md  caixa.txt  conf.xml
Engine/: 2  CMakeLists.txt  README.md  a.out  caixa  caixa.txt  cone.txt  conf.xml  engine.cpp  esfera.txt  gen  gen.cpp  main.aux  main.cpp  main.toc  meuplano  myc  mycone  myesf  sg.cpp  sg.h  test.cpp
Engine/SceneGraph/: sg.cpp  sg.h
Engine/TEX/: conf.xml  main.aux  main.out  main.tex  main.toc  structure.tex
Relatorio - Cuidado!/: README.txt  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  structure.tex
SceneGraph/: a.out  catmullmath.cpp  cronometro.cpp  cronometro.h  escala.cpp  escala.h  main.cpp  ponto.h  rotacaoT.cpp  rotacaoT.h  rotacaoV.cpp  rotacaoV.h  sg.cpp  sg.h  timedsg.cpp  timedsg.h  translacaoV.cpp  translacaoV.h
codigodoCesar/Esfera/: CMakeLists.txt  main.cpp
gerador/: cena  gen.cpp  gerador  pontos.txt
tmp/: main.tex  structure.tex
